--- a/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/client/default/scss/global.scss
+++ b/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/client/default/scss/global.scss
@@ -1,3 +1,6 @@
 @charset "UTF-8";
 
 @import "~base/global";
+@import "slick-carousel/slick/slick";
+@import "slick-carousel/slick/slick-theme";
+@import "exercise8";
