--- a/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/client/default/scss/exercise11.scss
+++ b/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/client/default/scss/exercise11.scss
@@ -30,7 +30,7 @@
     margin-bottom:10px;
 }
 
-.exercise11Label {
+.exercise11LabelLogin, .exercise11LabelOrder {
     width: 100%;
     height: 100%;
     background-size: cover;
@@ -39,14 +39,20 @@
     filter: grayscale(100%);
 }
 
-#exercise11InputLogin:checked  ~ * .exercise11Label {
+.exercise11LabelImg {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#exercise11InputLogin:checked  ~ * .exercise11LabelLogin {
     border-style: groove;
     border-color: aquamarine;
     border-width: thick;
     filter: grayscale(0%);
 }
 
-#exercise11InputOrder:checked ~ * .exercise11Label {
+#exercise11InputOrder:checked ~ * .exercise11LabelOrder {
     border-style: groove;
     border-color: aquamarine;
     border-width: thick;
@@ -65,23 +71,19 @@
     position: relative;
 }
 
-.exercise11LoginForm {
-    transform: translate(50%);
-}
-
-.exercise11OrderForm {
-    transform: translate(-50%);
+.exercise11LoginForm, .exercise11OrderForm {
+    width: 100%;
 }
 
 #exercise11InputLogin:checked {
-    ~ .exercise11LoginForm {
+    ~ * .exercise11LoginForm {
         max-height: 100vh;
         visibility: visible;    
     }
 }
 
 #exercise11InputOrder:checked {
-    ~ .exercise11OrderForm {
+    ~ * .exercise11OrderForm {
         max-height: 100vh;
         visibility: visible;    
     }
