--- a/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/client/default/scss/cart.scss
+++ b/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/client/default/scss/cart.scss
@@ -323,3 +323,7 @@ $negative-spacer: -0.625rem;
 .bonus-product-button {
     margin-right: 1.5em;
 }
+
+.importExceeded {
+    background-color: rgb(235, 151, 72);
+}
