--- a/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/client/default/scss/exercise5.scss
+++ b/training-sfcc-sfra-develop/cartridges/app_storefront_custom/cartridge/client/default/scss/exercise5.scss
@@ -12,3 +12,21 @@
     margin-top: 1vh;
     margin-bottom: 1vh;
 }
+
+.formFieldErrorMark {
+    border-color: red;
+    border-width: unset;
+}
+
+.invalid-feedback-email, .invalid-feedback-firstName, .invalid-feedback-lastName {
+    color: red;
+}
+
+.alert-success-text {
+    border-width: thin;
+    border-color: green;
+    background-color: rgb(182, 241, 182);
+    margin-bottom: 1em;
+    height: 2em;
+
+}
